Add retry for image operations against registry
STONEBLD-1873

Signed-off-by: Chenxiong Qi <cqi@redhat.com>

--- a/source-container-build/app/requirements-dev.txt
+++ b/source-container-build/app/requirements-dev.txt
@@ -5,6 +5,10 @@
 #    pip-compile --generate-hashes --output-file=requirements-dev.txt requirements-dev.in
 #
 
+backoff==2.2.1 \
+    --hash=sha256:03f829f5bb1923180821643f8753b0502c3b682293992485b0eef2807afa5cba \
+    --hash=sha256:63579f9a0628e06278f7e47b7d7d5b6ce20dc65c5e96a6f3ca99a6adca0396e8
+    # via -r requirements.txt
 coverage[toml]==7.4.4 \
     --hash=sha256:00838a35b882694afda09f85e469c96367daa3f3f2b097d846a7216993d37f4c \
     --hash=sha256:0513b9508b93da4e1716744ef6ebc507aff016ba115ffe8ecff744d1322a7b63 \
