Introduce a pyproject.toml
This is not to attempt to package anything, the sole reason for this
change is the fact that this is the default file for black to read
configuration from without having to use --config [1]. Given that we
have several black checks present in the repo in several tox.ini files,
it makes sense to have a global file common for all tox.ini tool
invocations to refer to.

Reformat whichever files do not conform with the proposed black
settings.

[1]

Signed-off-by: Erik Skultety <eskultet@redhat.com>

--- a/sbom-utility-scripts/scripts/sbom-for-oci-copy-task/tox.ini
+++ b/sbom-utility-scripts/scripts/sbom-for-oci-copy-task/tox.ini
@@ -15,7 +15,7 @@ commands = flake8 --max-line-length 120 sbom_for_oci_copy_task.py test_sbom_for_
 
 [testenv:black]
 deps = black
-commands = black --line-length 120 --check --diff .
+commands = black --check --diff .
 
 [flake8]
 # line-length check is useless since we have auto-formatting
