--- a/source-container-build/app/tox.ini
+++ b/source-container-build/app/tox.ini
@@ -11,4 +11,4 @@ commands = flake8 --max-line-length 100 --exclude .venv,.tox
 
 [testenv:black]
 deps = black
-commands = black --line-length 100 --check --diff .
+commands = black --check --diff .
