--- a/sbom-utility-scripts/scripts/add-image-reference-script/tox.ini
+++ b/sbom-utility-scripts/scripts/add-image-reference-script/tox.ini
@@ -17,4 +17,4 @@ commands = flake8 --max-line-length 120 .
 
 [testenv:black]
 deps = black
-commands = black --line-length 120 --check --diff .
+commands = black --check --diff .
