--- a/sbom-utility-scripts/scripts/base-images-sbom-script/app/tox.ini
+++ b/sbom-utility-scripts/scripts/base-images-sbom-script/app/tox.ini
@@ -13,7 +13,7 @@ commands = flake8 base_images_sbom_script.py test_base_images_sbom_script.py
 
 [testenv:black]
 deps = black
-commands = black --line-length 120 --check --diff .
+commands = black --check --diff .
 
 [flake8]
 # line-length check is useless since we have auto-formatting
