--- a/sbom-utility-scripts/scripts/index-image-sbom-script/tox.ini
+++ b/sbom-utility-scripts/scripts/index-image-sbom-script/tox.ini
@@ -13,4 +13,4 @@ commands = flake8 --max-line-length 120 index_image_sbom_script.py
 
 [testenv:black]
 deps = black
-commands = black --line-length 120 --check --diff index_image_sbom_script.py
+commands = black --check --diff index_image_sbom_script.py
