tox.ini: Drop line length check from flake8
We check that with black already, there's no point in checking it
twice + automatic formatting with black should be encouraged.

Signed-off-by: Erik Skultety <eskultet@redhat.com>

--- a/sbom-utility-scripts/scripts/sbom-for-modelcar-task/tox.ini
+++ b/sbom-utility-scripts/scripts/sbom-for-modelcar-task/tox.ini
@@ -11,7 +11,7 @@ commands = pytest test_sbom_for_modelcar_task.py
 [testenv:flake8]
 basepython = 3.12
 deps = flake8
-commands = flake8 --max-line-length 120 sbom_for_modelcar_task.py test_sbom_for_modelcar_task.py
+commands = flake8 sbom_for_modelcar_task.py test_sbom_for_modelcar_task.py
 
 [testenv:black]
 deps = black
