--- a/source-container-build/app/tox.ini
+++ b/source-container-build/app/tox.ini
@@ -7,7 +7,7 @@ commands = python3 -m pytest --cov=source_build --cov-report=term --cov-report=h
 
 [testenv:flake8]
 deps = flake8
-commands = flake8 --max-line-length 100 --exclude .venv,.tox
+commands = flake8 --exclude .venv,.tox
 
 [testenv:black]
 deps = black
