--- a/sbom-utility-scripts/scripts/add-image-reference-script/tox.ini
+++ b/sbom-utility-scripts/scripts/add-image-reference-script/tox.ini
@@ -13,7 +13,7 @@ commands = pytest ./ \
 
 [testenv:flake8]
 deps = flake8
-commands = flake8 --max-line-length 120 .
+commands = flake8 .
 
 [testenv:black]
 deps = black
