--- a/sbom-utility-scripts/scripts/index-image-sbom-script/tox.ini
+++ b/sbom-utility-scripts/scripts/index-image-sbom-script/tox.ini
@@ -9,7 +9,7 @@ commands = pytest -s -vv test_image_index_sbom_script.py
 
 [testenv:flake8]
 deps = flake8
-commands = flake8 --max-line-length 120 index_image_sbom_script.py
+commands = flake8 index_image_sbom_script.py
 
 [testenv:black]
 deps = black
