--- a/sbom-utility-scripts/scripts/merge-sboms-script/tox.ini
+++ b/sbom-utility-scripts/scripts/merge-sboms-script/tox.ini
@@ -11,7 +11,7 @@ commands = pytest test_merge_sboms.py
 [testenv:flake8]
 basepython = 3.12
 deps = flake8
-commands = flake8 --max-line-length 120 merge_sboms.py test_merge_sboms.py
+commands = flake8 merge_sboms.py test_merge_sboms.py
 
 [testenv:black]
 deps = black
