--- a/sbom-utility-scripts/scripts/sbom-for-oci-copy-task/tox.ini
+++ b/sbom-utility-scripts/scripts/sbom-for-oci-copy-task/tox.ini
@@ -11,7 +11,7 @@ commands = pytest test_sbom_for_oci_copy_task.py
 [testenv:flake8]
 basepython = 3.12
 deps = flake8
-commands = flake8 --max-line-length 120 sbom_for_oci_copy_task.py test_sbom_for_oci_copy_task.py
+commands = flake8 sbom_for_oci_copy_task.py test_sbom_for_oci_copy_task.py
 
 [testenv:black]
 deps = black
